Attach to Process using provided PID and retrieve Camel BacklogDebugger MBean
- from PID, able to retrieve the JMX connection (using sun.tools but not
found a better way)
- allow self attach when launching test so that we can have the Camel
route in the same VM in the tests. Won't be necessary at runtime.
- it requires Camel 3.15

kudos to @javaduke which helped and pointed to helpful code from
IntelliJ extension
https://github.com/javaduke/camel-idea-plugin/blob/main/camel-idea-plugin/src/main/java/com/github/cameltooling/idea/runner/debugger/CamelDebuggerSession.java#L505

Signed-off-by: Aurélien Pupier <apupier@redhat.com>